Fixed #11353 - Showcase | Toastdemo z-index is wrong

--- a/src/app/showcase/components/toast/toastdemo.scss
+++ b/src/app/showcase/components/toast/toastdemo.scss
@@ -22,3 +22,9 @@ button {
         }
     }
 }
+
+:host ::ng-deep { 
+    .p-toast{
+        z-index:4;
+    }
+}
