--- a/src/assets/showcase/styles/app/_topbar.scss
+++ b/src/assets/showcase/styles/app/_topbar.scss
@@ -5,7 +5,7 @@
     top: 0;
     left: 250px;
     width: calc(100% - 250px);
-    z-index: 1100;
+    z-index: 3;
     display: flex;
     align-items: center;
     padding: 0 4rem;
